<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232127"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="80dp"
            android:src="@drawable/genealogy_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_field_default"
            android:paddingLeft="30dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:textColorHint="#848383"
            app:hintTextAppearance="@style/MyAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/label_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/white"
                android:maxLength="25"
                android:paddingBottom="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_field_default"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="30dp"
            android:textColorHint="#848383"
            app:hintTextAppearance="@style/MyAppearance"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#848383">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/radius_button_disable"
            android:enabled="false"
            android:text="@string/btn_login"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/label_register_account"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>