<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fffdfd"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="16dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_event_date_created"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtSetDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="3dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:lines="1"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_event_time_created"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtSetTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="3dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:lines="1"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/txtContentTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_event_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="3dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:inputType="text|textMultiLine"
                        android:gravity="top|left"
                        android:lines="4"
                        android:imeOptions="actionDone"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_event_create"
                        android:textColor="@color/white"
                        android:id="@+id/btnCreateEvent"
                        android:enabled="false"
                        android:background="@drawable/radius_button_disable"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

    </ScrollView>
</LinearLayout>
