<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:clickable="false"
    android:id="@+id/profile_frame"
    tools:context=".view.fragment.genealogy.ShowGenealogyFragment.GenealogyFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:id="@+id/circle_profile"
                        android:src="@drawable/default_user_image"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="-20dp"
                        />

                    <ImageView
                        android:id="@+id/imgGenger"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="70dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/bg_field_custom"
                            android:paddingLeft="30dp"
                            android:paddingTop="6dp"
                            android:layout_marginTop="16dp"
                            android:textColorHint="#E8E8E8"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtFullname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/label_fullname"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:textColor="@color/colorPrimaryDark"
                                android:maxLength="25"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/bg_field_custom"
                            android:paddingLeft="30dp"
                            android:layout_marginTop="16dp"
                            android:paddingTop="6dp"
                            android:textColorHint="#E8E8E8"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtBirthday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/label_birthday"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:maxLength="25"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/bg_field_custom"
                            android:paddingLeft="30dp"
                            android:layout_marginTop="16dp"
                            android:paddingTop="6dp"
                            android:textColorHint="#E8E8E8"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtMail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/label_mail"
                                android:imeOptions="actionDone"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/white"
                                android:maxLength="25"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/bg_field_custom"
                            android:paddingLeft="30dp"
                            android:layout_marginTop="16dp"
                            android:paddingTop="6dp"
                            android:textColorHint="#E8E8E8"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/label_address"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:maxLength="25"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_edit"
            android:layout_margin="16dp" />
    </FrameLayout>

</FrameLayout>